# plant-disease-detector

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE.md  README.md  TASKS.md  pyproject.toml  train_model.py
classifier/: admin.py  forms.py  models.py  services.py  urls.py  utils.py  views.py
classifier/migrations/: 0001_initial.py
classifier/templates/classifier/: base.html  history.html  index.html  result.html
core/: settings.py  urls.py
