[project]
name = "plant-disease-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.8",
    "numpy>=2.3.5",
    "pillow>=12.0.0",
    "plotly>=6.5.0",
    "scipy>=1.16.3",
    "tensorflow>=2.20.0",
]
